tests/ui/typeck/conversion/explicit_conversion_event_to_bytes4.sol
//@compile-flags: -Ztypeck
contract Test {
    event MyCustomEvent(uint256);

    function test() public returns(bytes4) {
        return bytes4(MyCustomEvent); //~ ERROR: invalid explicit type conversion
    }
}
